--- a/2-ecma/index.html
+++ b/2-ecma/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <script src="./strings.js" defer></script> -->
-   <script src="./miscellaneous.js" defer></script>
+  <!-- <script src="./miscellaneous.js" defer></script> -->
+  <script src="./loops.js" defer></script>
   <title>Document</title>
 </head>
 <body>
